# tasklist

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  .tasklist  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  manager.rs  task.rs  tui.rs
tests/: integration_tests.rs
