[package]
name = "brd"
version = "0.1.0"
edition = "2024"
authors = ["Ilia Ilmer <contact@iliailmer.com>"]
description = "A fast, reliable CLI todo list with atomic operations and file locking"
readme = "README.md"
homepage = "https://github.com/iliailmer/board-rs"
repository = "https://github.com/iliailmer/board-rs"
license = "MIT"
keywords = ["cli", "todo", "task", "productivity", "kanban"]
categories = ["command-line-utilities"]
exclude = [".github/", "tests/"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.30", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28"
fs2 = "0.4"
home = "0.5.11"
ratatui = "0.29"
tabled = "0.18.0"
terminal_size = "0.4"
tempfile = "3.15"

[dev-dependencies]
tempfile = "3.15"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
